# glowing-tribble

./: Cargo.toml  README.md  index.html
.github/workflows/: .linux.yml  .windows.yml  compile.yml  linux.yml  rust.yml  windows.yml
assets/prefab/: sprite_animation.ron
assets/textures/: pong_spritesheet.ron
assets/ui/: combat.ron  loading.ron
config/: bindings.ron  display.ron
lint/: README.md
lint/functions/=> running/pong/: mod.rs
src/: logging.rs  main.rs  running.rs  testing.rs
src/constants/: Arena.rs  Ball.rs  Paddle.rs
src/crates/macros/: Cargo.toml
src/crates/macros/src/: main.rs
src/enum/: SpriteAnimationIds.rs  TransformAnimationIds.rs
src/functions/=> ( running | panic )/pong/: &app_root -> asset_dir.rs  -> app_root => ( stdout | panic ).rs  mod.rs
src/functions/=> logging/: default.rs
src/game/: ball.rs  mod.rs  paddle.rs
src/impl/bindingTypes/: input.rs
src/impl/states/: combat.rs  loading.rs
src/implementations/: Component for Ball.rs  Component for Paddle.rs  Paddle.rs  State for GameState.rs  System for BallSystem.rs  System for CollisionSystem.rs  System for PaddleSystem.rs  System for WinningSystem.rs
src/macros/: di.rs
src/states/: game.rs
src/struct/: CombatState.rs  InputBindingTypes.rs  LoadingState.rs  PrefabData.rs
src/structures/: Ball.rs  BallSystem.rs  CollisionSystem.rs  GameState.rs  Paddle.rs  PaddleSystem.rs  ScoreBoard.rs  ScoreText.rs  Side.rs  WinningSystem.rs
src/systems/: ball.rs  collision.rs  mod.rs  paddle.rs  winning.rs
src/test/: mod.rs  test.rs
(+14 files in other folders)
