[package]
name = "glowing-tribble"
version = "0.1.0"
authors = ["Nahej Lefebvre <nahejlefebvre@gmail.com>", "Daniel", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

# [target.x86_64-pc-windows-gnu]
# linker = "x86_64-w64-mingw32-gcc"
# ar = "x86_64-w64-mingw32-gcc-ar"
# cargo build --target=x86_64-pc-windows-gnu