[package]
name = "glowing-tribble"
version = "0.1.0"
authors = ["Nahej Lefebvre <nahejlefebvre@gmail.com>", "Daniel", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
deno_core = { version = "0.80.0" }
# some_macro = { path = "crates/macros" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
